# shiinaSign

./: .gitignore  gradle.properties  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init  xposed_module.json
app/src/main/java/androidx/core/app/: WindowsCompat.kt
app/src/main/java/com/shiinasign/server/: SignServer.kt
app/src/main/java/com/shiinasign/ui/: MainActivity.kt
app/src/main/java/com/shiinasign/xposed/: EcdhCapture.kt  HookEntry.kt  QimeiHook.kt
app/src/main/java/com/tencent/mobileqq/fe/: FEKit.java
app/src/main/java/com/tencent/mobileqq/sign/: QQSecuritySign.kt
app/src/main/java/com/tencent/secprotocol/: ByteData.java  ByteData.kt
app/src/main/java/moe/ore/android/: AndroKtx.kt  Application.kt  EasyActivity.kt
app/src/main/java/moe/ore/android/dialog/: Dialog.kt
app/src/main/java/moe/ore/android/tab/: TabFlashyAnimator.kt
app/src/main/java/moe/ore/android/toast/: Toast.kt
app/src/main/java/moe/ore/script/: AndroPrint.kt  Consist.kt
app/src/main/java/moe/ore/tars/: RequestPacket.java  TarsInputStream.java  TarsOutputStream.java  UniPacket.java
app/src/main/java/moe/ore/txhook/: EntryActivity.kt
app/src/main/java/moe/ore/xposed/: HookEntry.kt
app/src/main/java/shiinaSign/xposed/base/: BaseHook.kt  LoadApp.kt
app/src/main/java/shiinaSign/xposed/utils/: Crypter.java  FuzzySearchClass.kt  GlobalData.kt  HttpUtil.java  PacketDedupCache.kt  PrefsManager.kt  ProcessUtil.java  UnPacket.kt  ValueStore.kt  XPClassloader.kt  Xposeds.kt
app/src/main/jni/: CMakeLists.txt  clone_dobby.sh  ecdh_hook.c  ecdh_hook_stub.c
app/src/main/res/drawable/: ic_baseline_call_made_24.xml  ic_baseline_call_received_24.xml  ic_baseline_content_copy_24.xml  ic_entry_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_packet.xml  activity_parser.xml  custom_setting_view.xml  custom_tab.xml  dialog_input.xml  dialog_list.xml  dialog_tips.xml  fragment_hex.xml  fragment_main.xml  fragment_packet_info.xml  fragment_parser.xml  fragment_setting.xml  list_elem.xml
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
(+67 files in other folders)
